--- a/po/ta.po
+++ b/po/ta.po
@@ -1,115 +1,104 @@
 # Tamil translation of Yelp.
-# Copyright (C) 2003 Yelp's COPYRIGHT HOLDER
+# Copyright (C) 2003 Yelp's Dinesh Nadarajah
 # This file is distributed under the same license as the Yelp package.
 # Dinesh Nadarajah <n_dinesh@yahoo.com>, 2003.
+# Dinesh Nadarajah <dinesh_list@sbcglobal.net>, 2004.
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: Tamil Version of Yelp 2.1.0\n"
-"POT-Creation-Date: 2004-02-24 18:22-0600\n"
-"PO-Revision-Date: 2003-01-09 22:50+0600\n"
-"Last-Translator: Dinesh Nadarajah <n_dinesh@yahoo.com>\n"
-"Language-Team: Tamil <tamilinix@yahoogroups.com>\n"
+"Project-Id-Version: Tamil Version of Yelp 2.6\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-03-08 21:20-0600\n"
+"PO-Revision-Date: 2004-03-08 21:03-0600\n"
+"Last-Translator: Dinesh Nadarajah <dinesh_list@sbcglobal.net>\n"
+"Language-Team: Tamil <tamillinux-users@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "செயல்பாடுகள்"
+msgstr "குறும்பயன்கள்"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
 msgstr "செயல்பாடுகள்"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "கனோம் - கணிமேசை"
+msgstr "கணிமேசை"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
 msgstr "உருவாக்கம்"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "உருவாக்கம்"
+msgstr "மென்பொருள் உருவாக்கும் சூழல்"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "உருவாக்கம்"
+msgstr "மென்பொருள் உருவாக்குவதற்கான கருவிகள்"
 
 #: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
-#, fuzzy
 msgid "Editors"
-msgstr "/_தொகு"
+msgstr "பதிப்பாலர்"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "செயல்பாடுகள்"
+msgstr "கல்வி சார்ந்த செயல்பாடுகள்"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "விளையாட்டுகளும் பொழுதுபோக்குகளும்"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "¦À¡ÐÅ¡É¨Å"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
 msgstr "உதவி உள்ளடக்கங்கள்"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "செயல்பாடுகள்"
+msgstr "வலை சார்ந்த செயல்பாடுகள்"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "கரு நடைமுறைகள்"
+msgstr "கருகள்"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "செயல்பாடுகள்"
+msgstr "பல் ஊடகம் செயல்பாடுகள்"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
 msgstr ""
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "செயல்பாடுகள்"
+msgstr "விஞ்ஞானம் செயல்பாடுகள்"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "பாதுகாப்புகள்"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "அமைப்பு அழைப்புகள்"
+msgstr "அமைப்பு"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "பயனமைகள்"
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "செயல்பாடுகள்"
+msgstr "X செயல்பாடுகள்"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -117,15 +106,15 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "வகை_யுணர்வுள்ள"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "கண்டுபிடி"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "_கண்டுபிடி:"
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -137,7 +126,7 @@ msgstr "_முன்"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "மடிந்து _வருதல்"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -149,54 +138,49 @@ msgstr "யெல்ப் தொழிற்சாலை"
 
 #: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "யெல்ப்:ஆவணத்தில் href பண்பு இல்லை"
 
 #: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
 msgid "Out of memory"
-msgstr ""
+msgstr "நினைவகம் போதாது"
 
 #: src/yelp-db-pager.c:638 src/yelp-man-pager.c:370
 msgid "Titlepage"
-msgstr ""
+msgstr "தலைப்பு பக்கம்"
 
 #: src/yelp-db-pager.c:640 stylesheets/l10n.xml.in.h:30
 #: src/yelp-man-pager.c:372
-#, fuzzy
 msgid "Contents"
-msgstr "உதவி உள்ளடக்கங்கள்"
+msgstr "உள்ளடக்கங்கள்"
 
 #: src/yelp-db-pager.c:658 stylesheets/l10n.xml.in.h:69
 #: src/yelp-man-pager.c:390
 msgid "Unknown"
-msgstr ""
+msgstr "தெரியாதது"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "'%s' ஆவணம் இல்லை. கிடையாது."
+msgstr "தெரிவுசெய்த ஆவணம் திறக்க முடியவில்லை"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "'%s' ஆவணம் இல்லை. கிடையாது."
+msgstr "தெரிவுவெய்த பக்கம் இந்த ஆவணத்தில் கன்டுபிடிக்க முடியவில்லை."
 
 #: src/yelp-error.c:58
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "'%s' ஆவணம் இல்லை. கிடையாது."
+msgstr "உள்ளடக்கங்களை வாசிக்க முடியவில்லை."
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "DocBook SGML ஆவணங்களுக்கு இனிமேல் ஆதரவு கிடையாது."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "'%s' ஆவணம் இல்லை. கிடையாது."
+msgstr "தெரிவுசெய்த கோப்பை வாசிக்க முடியவில்லை."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
-msgstr ""
+msgstr "எந்த தற்காலிக சேமிப்பு அடைவு பயன்படுத்துவது என அறுதியிடுக"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -269,9 +253,8 @@ msgid "System Administration"
 msgstr "அமைப்பு நிர்வாகம்"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "ஆவணங்கள்"
+msgstr "ஆவணம் URI"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
@@ -282,15 +265,15 @@ msgid "YelpTocPager: Pause count is negative."
 msgstr ""
 
 #: src/yelp-toc-pager.c:486
-#, fuzzy, c-format
+#, c-format
 msgid "Could not load the OMF file '%s'."
-msgstr "யெல்ப் செயற்படுத்த முடியவில்லை: '%s'"
+msgstr "OMF கோப்பு '%s' எற்ற முடியவில்லை. "
 
-#: src/yelp-toc-pager.c:892
+#: src/yelp-toc-pager.c:883
 msgid "Categories"
 msgstr "வகையினங்கள்"
 
-#: src/yelp-toc-pager.c:906
+#: src/yelp-toc-pager.c:897
 msgid "Documents"
 msgstr "ஆவணங்கள்"
 
@@ -311,19 +294,16 @@ msgid "/_Edit"
 msgstr "/_தொகு"
 
 #: src/yelp-window.c:258
-#, fuzzy
 msgid "/Edit/_Find..."
-msgstr "/தொகு/இப்பக்கத்தில் கண்டுபிடி..."
+msgstr "/தொகு/_கண்டுபிடி..."
 
 #: src/yelp-window.c:261
-#, fuzzy
 msgid "/Edit/Find Ne_xt"
-msgstr "/தொகு/மறுபடியும் கண்டுபிடி"
+msgstr "/தொகு/அடுத்ததை கண்டு_பிடி"
 
 #: src/yelp-window.c:264
-#, fuzzy
 msgid "/Edit/Find Pre_vious"
-msgstr "/தொகு/மறுபடியும் கண்டுபிடி"
+msgstr "/தொகு/முந்தியதைக் _கண்டுபிடி"
 
 #: src/yelp-window.c:268
 msgid "/_Go"
@@ -342,24 +322,20 @@ msgid "/Go/_Home"
 msgstr "/போ/_இல்லம்"
 
 #: src/yelp-window.c:278
-#, fuzzy
 msgid "/Go/"
-msgstr "/_போ"
+msgstr "/_போ/"
 
 #: src/yelp-window.c:279
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "_முன்"
+msgstr "/முன்/முந்திய _பக்கம்"
 
 #: src/yelp-window.c:282
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/Go/_சுட்டு"
+msgstr "/போ/_அடுத்த பக்கம்"
 
 #: src/yelp-window.c:285
-#, fuzzy
 msgid "/Go/_Contents"
-msgstr "உதவி உள்ளடக்கங்கள்"
+msgstr "/போ/_உள்ளடக்கங்கள்"
 
 #: src/yelp-window.c:289
 msgid "/_Help"
@@ -411,30 +387,29 @@ msgstr "ஏற்றப்படுகின்றது..."
 msgid "translator_credits"
 msgstr "மொழிபெயர்ப்பர் பற்று"
 
-#: src/yelp-window.c:1305
-#, fuzzy
+#: src/yelp-window.c:1306
 msgid "A Help Browser for GNOME"
-msgstr "கனோம் 2.0 க்கான உதவி மேலோடி"
+msgstr "கனோமுக்கான உதவி மேலோடி"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
-msgstr ""
+msgstr "இக்கட்டுரையாப் பற்றி"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
@@ -442,27 +417,27 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Book"
-msgstr ""
+msgstr "இப்புத்தகதைப் பற்றி"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Chapter"
-msgstr ""
+msgstr "ீந்த அத்தியாயத்தைப் பற்றி"
 
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Entry"
-msgstr ""
+msgstr "ீந்த உள்ளீடு பர்றி"
 
 #: stylesheets/l10n.xml.in.h:10
 msgid "About This Glossary"
-msgstr ""
+msgstr "இந்த அறிகுறியைப் பற்றி"
 
 #: stylesheets/l10n.xml.in.h:11
 msgid "About This Index"
-msgstr ""
+msgstr "இந்த சுட்டு பற்றி"
 
 #: stylesheets/l10n.xml.in.h:12
 msgid "About This Part"
-msgstr ""
+msgstr "இந்த உறுப்பு பற்றி"
 
 #: stylesheets/l10n.xml.in.h:13
 msgid "About This Preface"
@@ -474,24 +449,23 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Section"
-msgstr ""
+msgstr "இந்த பகுதியைப் பற்றி"
 
 #: stylesheets/l10n.xml.in.h:16
 msgid "About This Set"
 msgstr ""
 
 #: stylesheets/l10n.xml.in.h:17
-#, fuzzy
 msgid "Affiliation"
-msgstr "செயல்பாடுகள்"
+msgstr "இணைப்பு கொண்டது"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
-msgstr ""
+msgstr "அனுபந்தம்"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "கட்டுரை"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
@@ -499,11 +473,11 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "¬º¢Ã¢Â÷"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "ஆசி¡¢யர்கள்"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
@@ -511,15 +485,15 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "புத்தகம்"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
-msgstr ""
+msgstr "கவனம்"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "அத்தியாயம்"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
@@ -535,45 +509,43 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "படியுரிமை"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
-msgstr ""
+msgstr "படியுரிமைகள்"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "திகதி"
 
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
-msgstr "பிரிவு"
+msgstr "அர்ப்பணம்"
 
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
 msgid "Editor"
-msgstr "/_தொகு"
+msgstr "பதிப்பான்"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "மின்அஞ்சல்"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "உதாரணம்"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "ஓவியம்"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
-msgstr ""
+msgstr "அறிகுறி"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "முக்கியம்"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
@@ -581,11 +553,11 @@ msgstr "சுட்டு"
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Legal Notice"
-msgstr ""
+msgstr "சட்டபூர்வமான அறிவிப்பு"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Level"
-msgstr ""
+msgstr "மட்டம்"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
@@ -593,97 +565,95 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
-msgstr ""
+msgstr "தகவல் மட்டம்"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Message Origin"
-msgstr ""
+msgstr "தகவல் தொடக்கம்"
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "குறிப்பு"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
-msgstr ""
+msgstr "தொடக்கம்"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Other Contributor"
-msgstr ""
+msgstr "மற்ற பங்கு அளிப்பவர்"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Other Contributors"
-msgstr ""
+msgstr "மற்ற பங்கு அளிப்பவர்கள்"
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Part"
-msgstr ""
+msgstr "உறுப்பு"
 
 #: stylesheets/l10n.xml.in.h:53
 msgid "Preface"
-msgstr ""
+msgstr "முன்னுரை"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "பதிப்பாளர்"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
-msgstr ""
+msgstr "பதிப்பாளர்கள்"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
-msgstr ""
+msgstr "குறிப்பு"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Reference Entry"
-msgstr ""
+msgstr "குறிப்பு உள்ளிட்பு"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr ""
+msgstr "குறிப்பு பகுதி"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "வெளியீட்பு தகவல்"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
-msgstr ""
+msgstr "மாற்றம் வரலாறு"
 
 #: stylesheets/l10n.xml.in.h:62
 msgid "See"
-msgstr ""
+msgstr "பார்க்கவும்"
 
 #: stylesheets/l10n.xml.in.h:63
 msgid "See Also"
-msgstr ""
+msgstr "இதையும் பார்க்கவும்"
 
 #: stylesheets/l10n.xml.in.h:64
-#, fuzzy
 msgid "Set Index"
-msgstr "சுட்டு"
+msgstr "சுட்டு அமைக்கவும்"
 
 #: stylesheets/l10n.xml.in.h:65
 msgid "Table"
-msgstr ""
+msgstr "அட்டவணை"
 
 #: stylesheets/l10n.xml.in.h:66
-#, fuzzy
 msgid "Table of Contents"
-msgstr "உதவி உள்ளடக்கங்கள்"
+msgstr "உள்ளடக்கங்கள்"
 
 #: stylesheets/l10n.xml.in.h:67
 msgid "Tip"
-msgstr ""
+msgstr "தகவல்"
 
 #: stylesheets/l10n.xml.in.h:68
 msgid "Title"
-msgstr ""
+msgstr "தலைப்பு"
 
 #: stylesheets/l10n.xml.in.h:70
 msgid "Warning"
-msgstr ""
+msgstr "எச்சரிக்கை"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -692,55 +662,3 @@ msgstr "கனோமைப் பற்றி உதவி பெறு"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "உதவி"
-
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "'%s' ஆவணம் இல்லை. கிடையாது."
-
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>இவ்வுரையை ஆவணத்தில் கண்டுபிடி:</b>"
-
-#~ msgid "Automatically _wrap around"
-#~ msgstr "தனியக்கதாக wrap செய்"
-
-#~ msgid "Find text..."
-#~ msgstr "சரம் கண்டுபிடிக்கவும்..."
-
-#~ msgid "Match _entire word"
-#~ msgstr "முழு சொல்லையும் சமமாக்கு"
-
-#~ msgid "_Match upper/lower case"
-#~ msgstr "மேல்/கீழ் வகையை சமமாக்கு"
-
-#~ msgid "_Search for:"
-#~ msgstr "_இதட்காக தேடு:"
-
-#~ msgid "GNOME - Desktop"
-#~ msgstr "கனோம் - கணிமேசை"
-
-#~ msgid "Additional documents"
-#~ msgstr "மற்ற/வேறு ஆவணங்கள்"
-
-#~ msgid "Manual Pages"
-#~ msgstr "உதவிப் பக்கஙகள்"
-
-#~ msgid "Info Pages"
-#~ msgstr "தகவல் பக்கஙகள்"
-
-#~ msgid "Manual pages"
-#~ msgstr "உதவிப் பக்கஙகள்"
-
-#~ msgid "GNOME is"
-#~ msgstr "கனோம்"
-
-#~ msgid "Free Software"
-#~ msgstr "இலவச மென்பொருள்"
-
-#~ msgid "(C)"
-#~ msgstr "(ப)"
-
-#, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "ஏற்றப்படுகின்றது..."
-
-#~ msgid "Search in the index"
-#~ msgstr "சுட்டியில் தேடுக"
