--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-09  Alexander Winston  <alexander.winston@comcast.net>
+
+	* en_CA.po: Added Canadian English translation at "160 translated
+	messages" status.
+
 2004-03-09  Paisa Seeluangsawat  <paisa@users.sf.net>
 
 	* th.po: Updated Thai translation.
