--- a/po/uk.po
+++ b/po/uk.po
@@ -5,110 +5,98 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2004-03-09 03:31-0600\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-03-10 15:25+0200\n"
 "PO-Revision-Date: 2003-04-08 07:25--500\n"
 "Last-Translator: Yuriy Syrota <yuri@renome.rovno.ua>\n"
 "Language-Team: Ukrainian <uk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "Програми"
+msgstr "Аплети"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
 msgstr "Програми"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - Стільниця"
+msgstr "Стільниця"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
 msgstr "Розробка"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "Розробка"
+msgstr "Середовища розробки"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "Розробка"
+msgstr "Засоби розробки"
 
 #: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
-#, fuzzy
 msgid "Editors"
-msgstr "_Редагування"
+msgstr "Редактори"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "Програми"
+msgstr "Навчальні програми"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Ігри і розваги"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "Загальне"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
 msgstr "Зміст довідки"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "Програми"
+msgstr "Програми для Інтернету"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "Робота з ядром"
+msgstr "Ядра"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Програми"
+msgstr "Програми для мультимедіа"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "Програми для офісу і роботи"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "Програми"
+msgstr "Наукові програми"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "Безпека"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "Системні виклики"
+msgstr "Система"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "Утиліти"
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "Програми"
+msgstr "Програми для системи X Window"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -116,15 +104,15 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "Враховувати _регістр"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "Знайти"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "З_найти:"
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -136,7 +124,7 @@ msgstr "_Попереднє"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "_Досягнувши кінця, починати спочатку"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -148,50 +136,45 @@ msgstr "Фабрика Yelp"
 
 #: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "Немає ознаки href у yelp:document"
 
 #: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
 msgid "Out of memory"
-msgstr ""
+msgstr "Недостатньо пам'яті"
 
 #: src/yelp-db-pager.c:638 src/yelp-man-pager.c:370
 msgid "Titlepage"
-msgstr ""
+msgstr "Титульна сторінка"
 
 #: src/yelp-db-pager.c:640 stylesheets/l10n.xml.in.h:30
 #: src/yelp-man-pager.c:372
-#, fuzzy
 msgid "Contents"
-msgstr "Зміст довідки"
+msgstr "Коментарі"
 
 #: src/yelp-db-pager.c:658 stylesheets/l10n.xml.in.h:69
 #: src/yelp-man-pager.c:390
 msgid "Unknown"
-msgstr ""
+msgstr "Невідомий"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "Документ \"%s\" не існує"
+msgstr "Неможливо відкрити вибраний документ"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "Документ \"%s\" не існує"
+msgstr "Неможливо знайти вибрану сторінку в документі"
 
 #: src/yelp-error.c:58
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "Документ \"%s\" не існує"
+msgstr "Неможливо зчитати зміст"
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "Документи формату DocBook SGML більше не підтримуються."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "Документ \"%s\" не існує"
+msgstr "Неможливо зчитати вибраний файл"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -221,7 +204,7 @@ msgstr "Termcap"
 
 #: src/yelp-man.c:322
 msgid "Perl"
-msgstr "PERL"
+msgstr "Perl"
 
 #: src/yelp-man.c:327
 msgid "Qt"
@@ -253,7 +236,7 @@ msgstr "Апаратні пристрої"
 
 #: src/yelp-man.c:444
 msgid "Configuration Files"
-msgstr "Конфіґураційні файли"
+msgstr "Конфігураційні файли"
 
 #: src/yelp-man.c:449
 msgid "Games"
@@ -268,22 +251,21 @@ msgid "System Administration"
 msgstr "Системне адміністрування"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "Документи"
+msgstr "URI документа"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "URI документа, що обробляється"
 
 #: src/yelp-toc-pager.c:266
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: від'ємна величина паузи."
 
 #: src/yelp-toc-pager.c:486
-#, fuzzy, c-format
+#, c-format
 msgid "Could not load the OMF file '%s'."
-msgstr "Не вдалося активувати Yelp: \"%s\""
+msgstr "Не вдалось завантажити файл у форматі OMF: \"%s\""
 
 #: src/yelp-toc-pager.c:883
 msgid "Categories"
@@ -310,19 +292,16 @@ msgid "/_Edit"
 msgstr "_Редагування"
 
 #: src/yelp-window.c:258
-#, fuzzy
 msgid "/Edit/_Find..."
-msgstr "/Редагування/_Знайти на сторінці..."
+msgstr "/Редагування/_Знайти..."
 
 #: src/yelp-window.c:261
-#, fuzzy
 msgid "/Edit/Find Ne_xt"
-msgstr "/Редагування/Шукати _далі"
+msgstr "/Редагування/Знайти _наступне"
 
 #: src/yelp-window.c:264
-#, fuzzy
 msgid "/Edit/Find Pre_vious"
-msgstr "/Редагування/Шукати _далі"
+msgstr "/Редагування/Знайти _попереднє"
 
 #: src/yelp-window.c:268
 msgid "/_Go"
@@ -341,24 +320,20 @@ msgid "/Go/_Home"
 msgstr "/Перейти/_Початкова сторінка"
 
 #: src/yelp-window.c:278
-#, fuzzy
 msgid "/Go/"
-msgstr "/_Перейти"
+msgstr "/Перейти"
 
 #: src/yelp-window.c:279
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "_Попереднє"
+msgstr "Перейти/_Попередня сторінка"
 
 #: src/yelp-window.c:282
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/Перейти/_Покажчик"
+msgstr "/Перейти/_Наступна сторінка"
 
 #: src/yelp-window.c:285
-#, fuzzy
 msgid "/Go/_Contents"
-msgstr "Зміст довідки"
+msgstr "Перейти/_Зміст"
 
 #: src/yelp-window.c:289
 msgid "/_Help"
@@ -416,162 +391,159 @@ msgstr "Перегляд довідки для GNOME"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
-msgstr ""
+msgstr "Про цю статтю"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "Про цю бібліографію"
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Book"
-msgstr ""
+msgstr "Про цю книгу"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Chapter"
-msgstr ""
+msgstr "Про цю главу"
 
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Entry"
-msgstr ""
+msgstr "Про це поле"
 
 #: stylesheets/l10n.xml.in.h:10
 msgid "About This Glossary"
-msgstr ""
+msgstr "Про цей глосарій"
 
 #: stylesheets/l10n.xml.in.h:11
 msgid "About This Index"
-msgstr ""
+msgstr "Про цей покажчик"
 
 #: stylesheets/l10n.xml.in.h:12
 msgid "About This Part"
-msgstr ""
+msgstr "Про цю частину"
 
 #: stylesheets/l10n.xml.in.h:13
 msgid "About This Preface"
-msgstr ""
+msgstr "Про цю передмову"
 
 #: stylesheets/l10n.xml.in.h:14
 msgid "About This Reference"
-msgstr ""
+msgstr "Про це посилання"
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Section"
-msgstr ""
+msgstr "Про цей розділ"
 
 #: stylesheets/l10n.xml.in.h:16
 msgid "About This Set"
-msgstr ""
+msgstr "Про цю збірку"
 
 #: stylesheets/l10n.xml.in.h:17
-#, fuzzy
 msgid "Affiliation"
-msgstr "Програми"
+msgstr "Приналежність"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
-msgstr ""
+msgstr "Додаток"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "Стаття"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
-msgstr ""
+msgstr "Аудиторія"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "Автор"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "Автори"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
-msgstr ""
+msgstr "Бібліографія"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "Книга"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
-msgstr ""
+msgstr "Попередження"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "Грава"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
-msgstr ""
+msgstr "Співпраця"
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Collaborators"
-msgstr ""
+msgstr "Співпрацівники"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
-msgstr ""
+msgstr "Колофон"
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "Авторське право"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
-msgstr ""
+msgstr "Авторські права"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "дата"
 
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
-msgstr "Розділ"
+msgstr "Присвята"
 
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
 msgid "Editor"
-msgstr "_Редагування"
+msgstr "Редактор"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "Електронна адреса"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "Приклад"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "Рисунок"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
-msgstr ""
+msgstr "Глосарій"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "Важливо"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
@@ -579,109 +551,107 @@ msgstr "Покажчик"
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Legal Notice"
-msgstr ""
+msgstr "Юридичне попередження"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Level"
-msgstr ""
+msgstr "Рівень"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
-msgstr ""
+msgstr "Аудиторя повідомлення"
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
-msgstr ""
+msgstr "Рівень повідомлення"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Message Origin"
-msgstr ""
+msgstr "Джерело повідомлення"
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "Нотатка"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
-msgstr ""
+msgstr "Джерело"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Other Contributor"
-msgstr ""
+msgstr "Інший співпрацівник"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Other Contributors"
-msgstr ""
+msgstr "Інші співпрацівники"
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Part"
-msgstr ""
+msgstr "Частина"
 
 #: stylesheets/l10n.xml.in.h:53
 msgid "Preface"
-msgstr ""
+msgstr "Передмова"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "Видавець"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
-msgstr ""
+msgstr "Видавці"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
-msgstr ""
+msgstr "Посилання"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Reference Entry"
-msgstr ""
+msgstr "Поле посилання"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr ""
+msgstr "Розділ посилання"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "Інформація щодо випуску"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
-msgstr ""
+msgstr "Історія виправлень"
 
 #: stylesheets/l10n.xml.in.h:62
 msgid "See"
-msgstr ""
+msgstr "Див."
 
 #: stylesheets/l10n.xml.in.h:63
 msgid "See Also"
-msgstr ""
+msgstr "Див. також"
 
 #: stylesheets/l10n.xml.in.h:64
-#, fuzzy
 msgid "Set Index"
-msgstr "Покажчик"
+msgstr "Встановити покажчик"
 
 #: stylesheets/l10n.xml.in.h:65
 msgid "Table"
-msgstr ""
+msgstr "Таблиця"
 
 #: stylesheets/l10n.xml.in.h:66
-#, fuzzy
 msgid "Table of Contents"
-msgstr "Зміст довідки"
+msgstr "Зміст"
 
 #: stylesheets/l10n.xml.in.h:67
 msgid "Tip"
-msgstr ""
+msgstr "Підказка"
 
 #: stylesheets/l10n.xml.in.h:68
 msgid "Title"
-msgstr ""
+msgstr "Заголовок"
 
 #: stylesheets/l10n.xml.in.h:70
 msgid "Warning"
-msgstr ""
+msgstr "Увага"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -690,55 +660,3 @@ msgstr "Отримати довідку про GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Довідка"
-
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "Документ \"%s\" не існує"
-
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>Знайти текст в документі:</b>"
-
-#~ msgid "Automatically _wrap around"
-#~ msgstr "Автоматичне _загортання"
-
-#~ msgid "Find text..."
-#~ msgstr "Знайти текст..."
-
-#~ msgid "Match _entire word"
-#~ msgstr "Співпадіння _слова"
-
-#~ msgid "_Match upper/lower case"
-#~ msgstr "Регістрова _чутливість"
-
-#~ msgid "_Search for:"
-#~ msgstr "_Шукати:"
-
-#~ msgid "GNOME - Desktop"
-#~ msgstr "GNOME - Стільниця"
-
-#~ msgid "Additional documents"
-#~ msgstr "Додаткові документи"
-
-#~ msgid "Manual Pages"
-#~ msgstr "Сторінки посібника"
-
-#~ msgid "Info Pages"
-#~ msgstr "Інформаційні сторінки"
-
-#~ msgid "Manual pages"
-#~ msgstr "Сторінки посібника"
-
-#~ msgid "GNOME is"
-#~ msgstr "GNOME - це"
-
-#~ msgid "Free Software"
-#~ msgstr "Вільне програмне забезпечення"
-
-#~ msgid "(C)"
-#~ msgstr "©"
-
-#, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "Завантаження..."
-
-#~ msgid "Search in the index"
-#~ msgstr "Пошук в показнику"
