--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-11  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Updated Serbian translations.
+
 2004-03-10  Yuriy Syrota  <rasta@cvs.gnome.org>
 
 	* uk.po: Updated Ukrainian translation.
