--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-14  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Fixed quotation marks in Danish translation - thanks to
+	Danilo Šegan.
+
 2004-03-13  Ales Nyakhaychyk  <nab@mail.by>
 
 	* be.po: Updated Belarusian translation.
