--- a/po/da.po
+++ b/po/da.po
@@ -5,14 +5,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 0.1\n"
-"POT-Creation-Date: 2004-03-09 03:31-0600\n"
-"PO-Revision-Date: 2004-02-18 11:24+0100\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-03-14 21:20+0100\n"
+"PO-Revision-Date: 2004-03-14 21:13+0100\n"
 "Last-Translator: Ole Laursen <olau@hardworking.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -391,19 +391,19 @@ msgstr "En hjælpelæser til Gnome"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr "&#8216;"
+msgstr "‚"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr "&#8217;"
+msgstr "‛"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr "&#8220;"
+msgstr "„"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr "&#8221;"
+msgstr "‟"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
