--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-15 Alastair McKinstry <mckinstry@computer.org>
+
+	* ga.po: Updated Irish translation.
+
 2004-03-15  Maxim Dziumanenko <mvd@mylinux.com.ua>
 
 	* uk.po: Fix some typos and accelerators
