--- a/po/ga.po
+++ b/po/ga.po
@@ -1,18 +1,19 @@
 # Irish translation of yelp.
 # Copyright (C) 2003,2004 Free Software Foundation, Inc.
 # Paul Duffy <dubhthach@frink.nuigalway.ie>, 2003.
+# Alastair McKinstry <mckinstry@computer.org>, 2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp HEAD\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-03-09 03:31-0600\n"
-"PO-Revision-Date: 2003-05-01 18:50+0100\n"
-"Last-Translator: Paul Duffy <dubhthach@frink.nuigalway.ie>\n"
+"PO-Revision-Date: 2004-03-15 18:50+0100\n"
+"Last-Translator: Alastair McKinstry <mckinstry@computer.org>\n"
 "Language-Team: Irish <gaeilge-gnulinux@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -20,7 +21,7 @@ msgstr ""
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
-msgstr ""
+msgstr "Feidhmchláraanna"
 
 #: data/toc.xml.in.h:3
 msgid "Desktop"
@@ -31,19 +32,16 @@ msgid "Development"
 msgstr "Forbairt"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "Forbairt"
+msgstr ""
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "Forbairt"
+msgstr "Uirlísí Forbairt"
 
 #: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
-#, fuzzy
 msgid "Editors"
-msgstr "/_Eagar"
+msgstr "Eagarthóirenna"
 
 #: data/toc.xml.in.h:8
 msgid "Education Applications"
@@ -99,7 +97,7 @@ msgstr ""
 
 #: data/toc.xml.in.h:21
 msgid "X Applications"
-msgstr ""
+msgstr "Feidhchláranna X"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -157,7 +155,7 @@ msgstr ""
 #: src/yelp-db-pager.c:658 stylesheets/l10n.xml.in.h:69
 #: src/yelp-man-pager.c:390
 msgid "Unknown"
-msgstr ""
+msgstr "Gan fhois"
 
 #: src/yelp-error.c:46
 msgid "The selected document could not be opened"
@@ -254,9 +252,8 @@ msgid "System Administration"
 msgstr ""
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "Doiciméadí"
+msgstr "URI Caipéis"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
@@ -273,7 +270,7 @@ msgstr ""
 
 #: src/yelp-toc-pager.c:883
 msgid "Categories"
-msgstr ""
+msgstr "Ranganna"
 
 #: src/yelp-toc-pager.c:897
 msgid "Documents"
@@ -296,12 +293,10 @@ msgid "/_Edit"
 msgstr "/_Eagar"
 
 #: src/yelp-window.c:258
-#, fuzzy
 msgid "/Edit/_Find..."
-msgstr "/Eagar/_Cuardaing i leathanach..."
+msgstr "/Eagar/_Cuardaigh i leathanach..."
 
 #: src/yelp-window.c:261
-#, fuzzy
 msgid "/Edit/Find Ne_xt"
 msgstr "/Eagar/_Cuardaigh arís"
 
@@ -327,14 +322,12 @@ msgid "/Go/_Home"
 msgstr "Téigh/_Abhaile"
 
 #: src/yelp-window.c:278
-#, fuzzy
 msgid "/Go/"
-msgstr "/_Téigh"
+msgstr "/_Téigh/"
 
 #: src/yelp-window.c:279
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "_Roimh Ré"
+msgstr "/Téigh/_Roimh Ré"
 
 #: src/yelp-window.c:282
 #, fuzzy
@@ -395,6 +388,8 @@ msgstr "ag Lódáil..."
 #: src/yelp-window.c:1300
 msgid "translator_credits"
 msgstr ""
+"Paul Duffy <dubhthach@frink.nuigalway.ie>\n"
+"Alastair McKinstry <mckinstry@computer.org>"
 
 #: src/yelp-window.c:1306
 msgid "A Help Browser for GNOME"
@@ -402,19 +397,19 @@ msgstr "Líonléitheoir Cabhair le haighaidh GNOME"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
@@ -526,29 +521,27 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "Dáta"
 
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
-msgstr "Earnáil"
+msgstr ""
 
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
 msgid "Editor"
-msgstr "/_Eagar"
+msgstr "Eagarthóir"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "Rphost"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "Sampla"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "Tarraingt"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
@@ -584,7 +577,7 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "Nota"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
@@ -643,30 +636,28 @@ msgid "See Also"
 msgstr ""
 
 #: stylesheets/l10n.xml.in.h:64
-#, fuzzy
 msgid "Set Index"
-msgstr "Innéacs"
+msgstr ""
 
 #: stylesheets/l10n.xml.in.h:65
 msgid "Table"
-msgstr ""
+msgstr "Tabla"
 
 #: stylesheets/l10n.xml.in.h:66
-#, fuzzy
 msgid "Table of Contents"
-msgstr "ábhar Cabhair"
+msgstr ""
 
 #: stylesheets/l10n.xml.in.h:67
 msgid "Tip"
-msgstr ""
+msgstr "Leathfhocal"
 
 #: stylesheets/l10n.xml.in.h:68
 msgid "Title"
-msgstr ""
+msgstr "Tidéal"
 
 #: stylesheets/l10n.xml.in.h:70
 msgid "Warning"
-msgstr ""
+msgstr "Rabhadh"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -676,42 +667,42 @@ msgstr "Faigh cabhair le haighaidh GNOME"
 msgid "Help"
 msgstr "Cabhair"
 
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>Cuardaigh téasc seo doiciméad:</b>"
+msgid "<b>Find text in the document:</b>"
+msgstr "<b>Cuardaigh téasc seo doiciméad:</b>"
 
-#~ msgid "Find text..."
-#~ msgstr "Cuardaigh téasc..."
+msgid "Find text..."
+msgstr "Cuardaigh téasc..."
 
-#~ msgid "_Search for:"
-#~ msgstr "C_uardaigh le haighaidh:"
+msgid "_Search for:"
+msgstr "C_uardaigh le haighaidh:"
 
-#~ msgid "GNOME - Desktop"
-#~ msgstr "GNOME - Deasc"
+msgid "GNOME - Desktop"
+msgstr "GNOME - Deasc"
 
-#~ msgid "Additional documents"
-#~ msgstr "Doiciméadí eile"
+msgid "Additional documents"
+msgstr "Doiciméadí eile"
 
-#~ msgid "Manual Pages"
-#~ msgstr "Leathanach as an Lámhleabhar"
+msgid "Manual Pages"
+msgstr "Leathanach as an Lámhleabhar"
 
-#~ msgid "Info Pages"
-#~ msgstr "Leathanach Eolas"
+msgid "Info Pages"
+msgstr "Leathanach Eolas"
 
-#~ msgid "Manual pages"
-#~ msgstr "leathanach as an Lámhleabhar "
+msgid "Manual pages"
+msgstr "leathanach as an Lámhleabhar "
 
-#~ msgid "GNOME is"
-#~ msgstr "Tá GNOME"
+msgid "GNOME is"
+msgstr "Tá GNOME"
 
-#~ msgid "Free Software"
-#~ msgstr "Clár Saoirse"
+msgid "Free Software"
+msgstr "Clár Saoirse"
 
-#~ msgid "(C)"
-#~ msgstr "(C)"
+msgid "(C)"
+msgstr "(C)"
 
 #, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "ag Lódáil..."
+msgid "Loading..&nbsp;"
+msgstr "ag Lódáil..."
 
-#~ msgid "Search in the index"
-#~ msgstr "Cuardaigh sa Innéacs"
+msgid "Search in the index"
+msgstr "Cuardaigh sa Innéacs"
