--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-16 Sayamindu Dasgupta <sayamindu@clai.net>
+
+	* bn.po: Updated Bengali translation
+
 2004-03-15 Alastair McKinstry <mckinstry@computer.org>
 
 	* ga.po: Updated Irish translation.
